# metajudge

./: .gitignore  .mcp.json  CLAUDE.md  METHODOLOGY.md  README.md  SOUL.md  auditor_test.md  pyproject.toml  requirements.txt
Benchmark_prep_docs_and_results_Apr_01/: BENCHMARK_composite_scoring_rationale.md  family_c_FULL_triplicate_results_and_analysis.md  family_c_all_runs.csv  family_c_item_audit (3).csv  family_c_item_audit (4).csv  metajudge-0-7-1 (2).ipynb  metajudge-072-ntbk-postaudi-triplicate-haberman.ipynb  nnarrativ-ntbk-v072-postaudit-triplsweep.ipynb
config/: benchmark_config.yaml  family_c_scoring.yaml
data/: adjudication_registry.json  calibration.csv  calibration_answer_key.json  calibration_provenance.csv  clean_subset_manifest.json  combined_discrimination_matrix.json  combined_survivors.json  discrimination_matrix.json  escalation_progress.json  family_b_pilot_v2.json  family_b_probe_report.json  family_b_rejection_log.json  family_c_items.json  frontier_rejection_log.json  metajudge_benchmark_v1.json  metajudge_benchmark_v41_base.json  multimodel_results.json
docs/: DOCUMENT_GUIDE.md  README.md  agentic_workflow_framework.md  benchmark_output_extraction.md  bridge_layer_and_minimal_safe_plan.md  calibration_v2_refinement_charter.md  dataset_cleaning_notes.md  family_b_dataset_design.md  family_b_kickoff_findings.md  family_b_literature_review.md  family_b_notebook_integration.md  family_b_scoring_spec.md  family_c_literature_report.md  item_development_methodology.md  kaggle_import_guide.md  kaggle_upload_guide.md  kaggle_upload_runbook.md  (+22 more)
(+687 files in other folders)
